# origami_env

./: .dockerignore  .gitignore  Dockerfile  HANDOFF_V2.md  PLAN_V2.md  PLAN_V3_SEQUENTIAL_TRAINING.md  README.md  __init__.py  client.py  demo.py  modal_eval.py  modal_eval_v3.py  modal_train.py  modal_train_v3.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
origami_server/: app.py  environment.py  models.py  tasks.py
origami_server/engine/: __init__.py  fold_parser.py  graph.py  paper_state.py  shape_match.py  step_reward.py
plans/: v3_sequential_rl.md
server/: app.py  environment.py  models.py  requirements.txt
server/engine/: simulate.py
tests/: test_origami.py
training/: Dockerfile.train  curriculum.py  env_pool.py  expert_search.py  gigpo.py  prompt_builder.py  reward.py  rollout.py  train_grpo.py  train_origami.ipynb  train_v3.py  trajectory.py
viewer/: index.html
